# authz

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION_PROMPT.xml  README.md  buf.yaml  docker-compose.yml  spicedb-commands.sh
.github/prompts/: write-prompt-issue.prompt.md
authzed/: beep.zed  docker-compose.yml
config/: queues.json
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/application/: mod.rs
core/src/domain/: mod.rs  service.rs
core/src/domain/channel/: entities.rs  mod.rs  port.rs  service.rs
core/src/domain/common/: mod.rs  service.rs
core/src/domain/permission_override/: entities.rs  mod.rs  port.rs  service.rs
core/src/domain/role/: entities.rs  mod.rs  port.rs  service.rs
core/src/domain/server/: entities.rs  mod.rs  port.rs  service.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/authzed/: entities.rs  error.rs  mod.rs
core/src/infrastructure/channel/repository/: mod.rs
core/src/infrastructure/channel/repository/authzed/: entities.rs  mod.rs
core/src/infrastructure/common/: mod.rs  permissions.rs
core/src/infrastructure/common/authzed/entities/: channel.rs  mod.rs  server.rs  user.rs
core/src/infrastructure/permission_override/repository/authzed/: entities.rs  mod.rs
core/src/infrastructure/role/repository/authzed/: entities.rs  mod.rs
core/src/infrastructure/server/: mod.rs
core/src/infrastructure/server/repository/authzed/: entities.rs  mod.rs
docs/: book.toml
listeners/: Cargo.toml
listeners/examples/: produce_create_channel.rs  produce_create_server.rs  produce_delete_channel.rs  produce_delete_server.rs  query_servers.rs
listeners/src/: app.rs  config.rs  lapin.rs  lib.rs  main.rs  permissions_translations.rs
listeners/src/rabbit/: mod.rs
listeners/src/rabbit/channel/: consumers.rs  handler.rs  mod.rs
listeners/src/rabbit/consumers/: mod.rs  pool.rs
listeners/src/rabbit/permission_override/: consumers.rs  handler.rs
listeners/src/rabbit/role/: consumers.rs  handler.rs
listeners/src/rabbit/server/: consumers.rs  handler.rs  mod.rs  queues.rs
(+31 files in other folders)
