[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC runtime and client
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.17"


[build-dependencies]
tonic-build = "0.12"
