[package]
name = "authz_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC runtime and client
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive", "env"] }
env = "1.0.1"
futures = "0.3"
tracing = "0.1"


[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"
