[package]
name = "listeners"
version = "0.1.0"
edition = "2024"

[dependencies]
authz_core = { path = "../core", package = "core" }
clap = { version = "4.5.53", features = ["derive", "env"] }
env = "1.0.1"
lapin = "3.7.2"
prost = "0.14.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
events-protobuf = { git = "https://github.com/beep-industries/events-protobuf.git"}
