[package]
name = "listeners"
version = "0.1.0"
edition = "2024"

[dependencies]
authz_core = { path = "../core" }
clap = { version = "4.5.53", features = ["derive", "env"] }
env = "1.0.1"
lapin = "3.7.2"
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
events-protobuf = { git = "https://github.com/beep-industries/events-protobuf.git"}
dotenv = "0.15.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
permission-translation = "0.3.0"

[dev-dependencies]
tempfile = "3.8"
